--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 /* Top Bar */
 .top-bar {
-  background-color: rgb(255, 51, 0);
+  background-color: rgb(0, 102, 255); /* Changed to blue */
   color: white;
   display: flex;
   justify-content: space-between;
@@ -48,7 +48,7 @@
   display: none;
   font-size: 22px;
   cursor: pointer;
-  color: rgb(255, 51, 0);
+  color: rgb(9, 44, 133);
 }
 
 /* Navigation Links */
@@ -74,7 +74,7 @@
 
 .nav-links a:hover,
 .nav-links span:hover {
-  color: rgb(255, 51, 0);
+  color: rgb(0, 145, 255);
 }
 
 .dropdown-menu {
@@ -99,13 +99,13 @@
 .dropdown-menu li {
   padding: 8px 20px;
   white-space: nowrap;
-  color: black;
+  color: rgb(10, 6, 70);
   transition: background-color 0.3s ease, color 0.3s ease;
   cursor: pointer;
 }
 
 .dropdown-menu li:hover {
-  background-color: rgba(242, 228, 212, 0.667);
+  background-color: rgba(212, 227, 242, 0.667);
   color: white;
 }
 
