--- a/src/consultancy/RetainerServices.css
+++ b/src/consultancy/RetainerServices.css
@@ -39,7 +39,8 @@
 }
 
 .service-label {
-  color: #f85503;
+  color: #039ef8;
+
   font-weight: 500;
   text-transform: uppercase;
   font-size: 28px;
@@ -48,13 +49,13 @@
 .text-section h2 {
   font-size: 28px;
   margin: 10px 0;
-  color: #f85503;
+  color: #ffffff; 
 }
 
 .legal-description {
   font-size: 18px;
   line-height: 1.6;
-  color: #020202;
+  color: #ffffff;
 }
 
 .legal-image-section img {
